feature: creado endpoints para compras
