# src/controllers/compra.controller.js
@@ -17,4 +17,19 @@ router.post('/create', async (req, res) => {
   }
 })
 
+router.get('/', async (req, res) => {
+  try {
+    const compras = await CompraService.ObtenerCompras()
+    return res.status(200).json(compras)
+  } catch (error) {
+    return res.status(500).json({ Error: 'Error del servidor' })
+  }
+})
+
+router.delete('/:id', async (req, res) => {
+  const { id } = req.params
+  await CompraService.EliminarCompra(id)
+  res.status(200).json({ message: 'Se ha eliminado correctamente' })
+})
+
 export default router
