# swagger.json
@@ -282,7 +282,6 @@
         }
       }
     },
-
     "/api/proveedor": {
       "get": {
         "tags": ["Proveedor"],
@@ -421,6 +420,20 @@
         }
       }
     },
+    "/api/compra/": {
+      "get": {
+        "tags": ["Compra"],
+        "description": "Obtiene la informacion de los compras, con la informacion del proveedor",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/compra/create": {
       "post": {
         "tags": ["Compra"],
@@ -490,6 +503,39 @@
         }
       }
     },
+    "/api/compra/{id}": {
+      "delete": {
+        "tags": ["Compra"],
+        "description": "elimina una compra deacuerdo a su id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/queso": {
+      "get": {
+        "tags": ["Quesos"],
+        "description": "Obtiene la lista de todos los quesos registrados.",
+        "responses": {
+          "200": {
+            "description": "Lista de quesos obtenida correctamente."
+          },
+          "500": {
+            "description": "Error interno del servidor."
+          }
+        }
+      }
+    },
     "/api/queso/create": {
       "post": {
         "tags": ["Quesos"],
@@ -545,20 +591,6 @@
         }
       }
     },
-    "/api/queso": {
-      "get": {
-        "tags": ["Quesos"],
-        "description": "Obtiene la lista de todos los quesos registrados.",
-        "responses": {
-          "200": {
-            "description": "Lista de quesos obtenida correctamente."
-          },
-          "500": {
-            "description": "Error interno del servidor."
-          }
-        }
-      }
-    },
     "/api/queso/{id}": {
       "delete": {
         "tags": ["Quesos"],
@@ -577,6 +609,71 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/produccion": {
+      "get": {
+        "tags": ["Produccion"],
+        "description": "Devuelve la lista de todas las producciones registradas.",
+        "responses": {
+          "200": {
+            "description": "Lista de producciones obtenida correctamente.",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "id_produccion": {
+                    "type": "integer",
+                    "example": 32
+                  },
+                  "nombre_queso": {
+                    "type": "string",
+                    "example": "Queso Mozzarella"
+                  },
+                  "fecha_produccion": {
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2025-03-31T17:11:38.810Z"
+                  },
+                  "cantidad_producida": {
+                    "type": "integer",
+                    "example": 10
+                  },
+                  "peso_total_kg": {
+                    "type": "number",
+                    "format": "decimal",
+                    "example": 25.0
+                  },
+                  "responsable": {
+                    "type": "string",
+                    "example": "Juan Pérez"
+                  },
+                  "estado": {
+                    "type": "string",
+                    "example": "cancelado"
+                  },
+                  "observaciones": {
+                    "type": "string",
+                    "example": "Producción en curso, buena calidad."
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error interno del servidor.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "Error al obtener la producción."
+                }
+              }
+            }
           }
         }
       }
@@ -705,71 +802,6 @@
                 "message": {
                   "type": "string",
                   "example": "Error del servidor."
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/produccion": {
-      "get": {
-        "tags": ["Produccion"],
-        "description": "Devuelve la lista de todas las producciones registradas.",
-        "responses": {
-          "200": {
-            "description": "Lista de producciones obtenida correctamente.",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "id_produccion": {
-                    "type": "integer",
-                    "example": 32
-                  },
-                  "nombre_queso": {
-                    "type": "string",
-                    "example": "Queso Mozzarella"
-                  },
-                  "fecha_produccion": {
-                    "type": "string",
-                    "format": "date-time",
-                    "example": "2025-03-31T17:11:38.810Z"
-                  },
-                  "cantidad_producida": {
-                    "type": "integer",
-                    "example": 10
-                  },
-                  "peso_total_kg": {
-                    "type": "number",
-                    "format": "decimal",
-                    "example": 25.0
-                  },
-                  "responsable": {
-                    "type": "string",
-                    "example": "Juan Pérez"
-                  },
-                  "estado": {
-                    "type": "string",
-                    "example": "cancelado"
-                  },
-                  "observaciones": {
-                    "type": "string",
-                    "example": "Producción en curso, buena calidad."
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Error interno del servidor.",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error": {
-                  "type": "string",
-                  "example": "Error al obtener la producción."
                 }
               }
             }
